--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Projeto Redes Sociais</title>
-    <link rel="shortcut icon" href="">
 </head>
 <body>
-    
+    <main id="grid">
+        <section id="telefone">
+            <iframe src="home.html" name="tela" id="tela"></iframe>
+        </section>
+
+        <aside id="redesSociais">
+            <a href="tela"><img src="imagens/logo-home.jpg" class="imgMenu"></a>
+            <a href="tela"><img src="imagens/logo-youtube.jpg" class="imgMenu"></a>
+            <a href="tela"><img src="imagens/logo-github.jpg" class="imgMenu"></a>
+            <a href="tela"><img src="imagens/logo-instagram.jpg" class="imgMenu"></a>
+            <a href="tela"><img src="imagens/logo-twitter.jpg" class="imgMenu"></a>
+            <a href="tela"><img src="imagens/logo-facebook.jpg" class="imgMenu"></a>
+        </aside>
+    </main>
 </body>
 </html>
