--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         </section>
 
         <aside id="redesSociais">
-            <a href="tela"><img src="imagens/logo-home.jpg" class="imgMenu"></a>
-            <a href="tela"><img src="imagens/logo-youtube.jpg" class="imgMenu"></a>
-            <a href="tela"><img src="imagens/logo-github.jpg" class="imgMenu"></a>
-            <a href="tela"><img src="imagens/logo-instagram.jpg" class="imgMenu"></a>
-            <a href="tela"><img src="imagens/logo-twitter.jpg" class="imgMenu"></a>
-            <a href="tela"><img src="imagens/logo-facebook.jpg" class="imgMenu"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" class="imgMenu"></a>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" class="imgMenu"></a>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" class="imgMenu"></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" class="imgMenu"></a>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" class="imgMenu"></a>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" class="imgMenu"></a>
         </aside>
     </main>
 </body>
