--- a/facebook.html
+++ b/facebook.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="">
+    <img src="imagens/tela-facebook.png" alt="">
     <a href="https://www.facebook.com/felipe.facklam" target="_blank">
         <p>ACESSE</p>
     </a>
