--- a/github.html
+++ b/github.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="imagens/tela-github.jpg" alt="">
+    <img src="imagens/tela-github.png" alt="">
     <a href="https://github.com/felipefacklam?tab=repositories&q=&type=public&language=&sort=" target="_blank">
         <p>ACESSE</p>
     </a>
