--- a/instagram.html
+++ b/instagram.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="">
+    <img src="imagens/tela-instagram.png" alt="">
     <a href="https://www.instagram.com/facklamfelipe/" target="_blank">
         <p>ACESSE</p>
     </a>
