--- a/twitter.html
+++ b/twitter.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="imagens/tela-twitter.jpg" alt="">
+    <img src="imagens/tela-twitter.png" alt="">
     <a href="https://twitter.com/FacklamFelipe" target="_blank">
         <p>ACESSE</p>
     </a>
